Controller, Entity, Repo, service work, GET,POST, Find work